# rpvt

./: .gitignore  CLAUDE.md  PREDICTIVE_TRANSFORMER.md  README.md  RECURRENT_MEMORY_TRANSFORMER.md  ROADMAP.md  architecture_diagram.md  pyproject.toml  run_overnight.sh
paper/: outline.md
results/: FINDINGS.md  RESULTS_SUMMARY.md  squad_memory_dependent_indices.json
results/exp_v3_2_cross_attn_1.5b/: results.json
results/exp_v3_2_cross_attn_1.5b_15ep/: results.json
results/exp_v3_2_cross_attn_1.5b_6qa/: results.json
results/exp_v3_2_cross_attn_1.5b_6qa_longgap/: results.json
results/exp_v3_2_cross_attn_1.5b_confusable/: results.json
results/exp_v3_2_cross_attn_1.5b_extract4/: results.json
results/exp_v3_2_cross_attn_1.5b_multi/: results.json
results/exp_v3_2_cross_attn_1.5b_n5/: results.json
results/exp_v3_2_generalization_multi/: results.json
results/exp_v3_2_generalization_n5/: results.json
results/exp_v3_2_generalization_natural/: results.json
results/exp_v3_2_generalization_squad/: results.json
results/exp_v3_2_generalization_train/: results.json
results/exp_v3_2_natural_to_multi/: results.json
results/exp_v3_2_natural_to_squad/: results.json
results/exp_v3_2_natural_to_synthetic/: results.json
results/exp_v3_2_natural_trained/: results.json
results/exp_v3_2_no_memory_1.5b/: results.json
results/exp_v3_2_reasoning_trained/: results.json
results/exp_v3_2_reasoning_zeroshot/: results.json
results/exp_v3_2_smollm2_1.7b/: results.json
results/exp_v3_2_squad_no_memory/: results.json
rpvt/: __init__.py
rpvt/agent/: cli.py  (+12 more)
(+90 files in other folders)
