[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rpvt"
version = "0.1.0"
description = "Recurrent Plastic Value-Driven Transformer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "safetensors",
    "wandb",
    "tqdm",
    "datasets",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipython",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
include = ["rpvt*"]
